[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/grabDialogue.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Titillium-BoldItalic.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Titillium-RegularItalic.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Titillium-Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/dialogText.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[node name="dialog" type="Node"]
script = ExtResource( 1 )

[node name="textBox" type="Polygon2D" parent="."]
position = Vector2( 2.10278, -377.772 )
color = Color( 0.0898438, 0.0838776, 0.0838776, 1 )
polygon = PoolVector2Array( 35.8515, 403.941, 972.832, 404.97, 975.404, 580.733, 30.5721, 581.59 )
__meta__ = {
"_edit_group_": true
}

[node name="dialogText" type="RichTextLabel" parent="textBox"]
margin_left = 51.0
margin_top = 421.0
margin_right = 946.0
margin_bottom = 566.0
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="textBox/dialogText"]
wait_time = 0.05
autostart = true

[connection signal="meta_clicked" from="textBox/dialogText" to="textBox/dialogText" method="_on_dialogText_meta_clicked"]
[connection signal="meta_hover_ended" from="textBox/dialogText" to="textBox/dialogText" method="_on_dialogText_meta_hover_ended"]
[connection signal="meta_hover_started" from="textBox/dialogText" to="textBox/dialogText" method="_on_dialogText_meta_hover_started"]
[connection signal="timeout" from="textBox/dialogText/Timer" to="textBox/dialogText" method="_on_Timer_timeout"]
